--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-    <title>My Portfolio</title>
+    <title>portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
@@ -9,32 +9,63 @@
 </head>
 <body>
     <div class="container">
-        <div class="profile">
+        <div class="language-select-container"> <!-- Новый контейнер для выбора языка -->
+            <div class="language-select">
+                <label for="language">🌍:</label>
+                <select id="language" onchange="changeLanguage()">
+                    <option value="index.html" selected>Русский</option>
+                    <option value="index_en.html">English</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="profile-wrapper"> <!-- Обертка для аватара и описания -->
+			
             <img src="assets/your-avatar.jpg" alt="Ваш аватар" class="avatar">
             <h1>Сергей Вельский</h1>
             <p class="description">"Python Developer | Telegram Bot Creator | AI Enthusiast"</p>
         </div>
-
+ 
         <div class="bot-list">
-            <div class="bot-item">
-                <h2>📜Канал: Funny art images</h2>
-                <p>A daily dose of inspiration from Artificial Intelligence! Multiple times a day, neural networks generate unique artworks based on an analysis of current trending prompts. The AI itself chooses the time, crafts the prompt, and creates the image. Subscribe and dive into the world of machine creativity!<br>
-				The channel is managed by an autonomous bot. 👻<br><br>
-				Ежедневная доза вдохновения от Искуственного Интелекта!
-				Несколько раз в день на основе анализа актуальных запросов нейросети генерируют уникальные арты. ИИ сам выбирает время, формирует запрос и генерирует изображение.
-				Подпишись и погрузись в мир машинного творчества!<br><i>Каналом управляет автономный бот.</i>👻</p>
-                <a href="https://t.me/The_AI_Art_Anarchy" target="_blank">Перейти на канал</a>
-            </div>
+			<div class="bot-item">
+				<div class="bot-item-screenshot">
+					<img src="assets/The_AI_Art_Anarchy.png" alt="Скриншот The_AI_Art_Anarchy">
+				</div>
+				<div class="bot-item-description">
+					<h2>📜Канал: The AI Art Anarchy</h2>
+					<!--A daily dose of inspiration from Artificial Intelligence! Multiple times a day, neural networks generate unique artworks based on an analysis of current trending prompts. The AI itself chooses the time, crafts the prompt, and creates the image. Subscribe and dive into the world of machine creativity!<br> 
+					The channel is managed by an autonomous bot. 👻<br><br>-->
+					<p>Ежедневная доза вдохновения от Искуственного Интелекта!
+					Несколько раз в день на основе анализа актуальных запросов нейросети генерируют уникальные арты. ИИ сам выбирает время, формирует запрос и генерирует изображение.
+					Подпишись и погрузись в мир машинного творчества!<br><i>Каналом управляет автономный бот.</i>👻</p>
+					<a href="https://t.me/The_AI_Art_Anarchy" target="_blank">👉 Перейти на канал </a>
+				</div>
+			</div>
 
-            <div class="bot-item">
-                <h2>📜Канал: The AI Art Anarchy</h2>
-                <p>Random themes meet AI curation! Each day, this channel generates a new theme and finds the perfect images to match. Get inspired daily!<br><br>
-				   Этот канал генерирует тему случайным образом, а затем ИИ находит лучшие картинки по ней. Каждый день новая подборка.</p>
-                <a href="https://t.me/Fanny_art" target="_blank">Перейти на канал</a>
-            </div>    
+			<div class="bot-item">
+				<div class="bot-item-screenshot">
+					<img src="assets/Fanny_art.png" alt="Скриншот The_AI_Art_Anarchy">
+				</div>
+				<div class="bot-item-description">
+					<h2>📜Канал: Funny art images</h2>
+					<!-- Random themes meet AI curation! Each day, this channel generates a new theme and finds the perfect images to match. Get inspired daily!<br><br> -->
+				   <p>Этот канал генерирует тему случайным образом, а затем ИИ находит лучшие картинки по ней. Каждый день новая подборка.</p>
+					<a href="https://t.me/Fanny_art" target="_blank">👉 Перейти на канал </a>
+				</div>
+			</div>
+
+
+
+			    <img src="assets/896.gif" alt="Анимация" class="bot-animation">
         </div>
     </div>
-
+	
     <script src="script.js"></script>
+    <script>
+        function changeLanguage() {
+            var selectedLanguage = document.getElementById("language").value;
+            window.location.href = selectedLanguage;
+        }
+    </script>
 </body>
 </html>
