--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <div class="language-select">
                 <label for="language">🌍:</label>
                 <select id="language" onchange="changeLanguage()">
-                    <option value="index.html" selected>Русский</option>
-                    <option value="index_en.html">English</option>
+                    <option value="index.html" selected>Ру</option>
+                    <option value="index_en.html">En</option>
                 </select>
             </div>
         </div>
@@ -32,7 +32,7 @@
 					<img src="assets/The_AI_Art_Anarchy.png" alt="Скриншот The_AI_Art_Anarchy">
 				</div>
 				<div class="bot-item-description">
-					<h2>📜Канал: The AI Art Anarchy</h2>
+					<h2>📜The AI Art Anarchy</h2>
 					<!--A daily dose of inspiration from Artificial Intelligence! Multiple times a day, neural networks generate unique artworks based on an analysis of current trending prompts. The AI itself chooses the time, crafts the prompt, and creates the image. Subscribe and dive into the world of machine creativity!<br> 
 					The channel is managed by an autonomous bot. 👻<br><br>-->
 					<p>Ежедневная доза вдохновения от Искуственного Интелекта!
@@ -44,22 +44,31 @@
 
 			<div class="bot-item">
 				<div class="bot-item-screenshot">
-					<img src="assets/Fanny_art.png" alt="Скриншот The_AI_Art_Anarchy">
+					<img src="assets/Fanny_art.png" alt="Скриншот Fanny_art">
 				</div>
 				<div class="bot-item-description">
-					<h2>📜Канал: Funny art images</h2>
+					<h2>📜Funny art images</h2>
 					<!-- Random themes meet AI curation! Each day, this channel generates a new theme and finds the perfect images to match. Get inspired daily!<br><br> -->
 				   <p>Этот канал генерирует тему случайным образом, а затем ИИ находит лучшие картинки по ней. Каждый день новая подборка.</p>
 					<a href="https://t.me/Fanny_art" target="_blank">👉 Перейти на канал </a>
 				</div>
 			</div>
+			
+			<div class="bot-item">
+					<div class="bot-item-screenshot">
+						<img src="assets/python_art.png" alt="Скриншот Python_Git">
+					</div>
+					<div class="bot-item-description">
+						<h2>📜Python Git</h2>
+						<!-- Small Python projects with code explanations — an evolving collection for learning and inspiration.<br><br> -->
+					   <p>Маленькие проекты на Python с объяснением кода — пополняемая подборка для обучения и вдохновения.</p>
+						<a href="https://t.me/python_Git" target="_blank">👉 Перейти на канал </a>
+					</div>
+			</div>
 
+		</div>
+	</div>
 
-
-			    <img src="assets/896.gif" alt="Анимация" class="bot-animation">
-        </div>
-    </div>
-	
     <script src="script.js"></script>
     <script>
         function changeLanguage() {
