--- a/index_en.html
+++ b/index_en.html
@@ -13,8 +13,8 @@
             <div class="language-select">
                 <label for="language">🌍:</label>
                 <select id="language" onchange="changeLanguage()">
-                    <option value="index.html">Русский</option>
-                    <option value="index_en.html" selected>English</option>
+                    <option value="index.html">Ру</option>
+                    <option value="index_en.html" selected>En</option>
                 </select>
             </div>
         </div>
@@ -50,7 +50,17 @@
 				</div>
 			</div>
 
-
+			<div class="bot-item">
+					<div class="bot-item-screenshot">
+						<img src="assets/python_art.png" alt="Скриншот Python_Git">
+					</div>
+					<div class="bot-item-description">
+						<h2>📜Python Git</h2>
+						<!-- <br><br> -->
+					   <p>Small Python projects with code explanations — an evolving collection for learning and inspiration.</p>
+						<a href="https://t.me/python_Git" target="_blank">👉 Go to channel</a>
+					</div>
+			</div>
 
 			    <img src="assets/896.gif" alt="Анимация" class="bot-animation">
         </div>
