--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
 						<a href="https://t.me/python_Git" target="_blank">👉 Перейти на канал </a>
 					</div>
 			</div>
+			
+			<div class="bot-item">
+					<div class="bot-item-screenshot">
+						<img src="assets/roblox_art.png" alt="Скриншот roblox_art">
+					</div>
+					<div class="bot-item-description">
+						<h2>📜Roblox Git</h2>					
+					   <p>Здесь ты найдешь лучшие Lua-скрипты для Roblox! Улучшай свою игру, создавай новые возможности и удивляй друзей. Подписывайся и будь в курсе свежих обновлений!</p>
+						<a href="https://t.me/+f6UreQx9mYI5NGMy" target="_blank">👉 Перейти на канал </a>
+					</div>
+			</div>
 
 		</div>
 	</div>
