--- a/index_en.html
+++ b/index_en.html
@@ -62,6 +62,19 @@
 					</div>
 			</div>
 
+			<div class="bot-item">
+					<div class="bot-item-screenshot">
+						<img src="assets/roblox_art.png" alt="Скриншот roblox_art">
+					</div>
+					<div class="bot-item-description">
+						<h2>📜Roblox Git</h2>					
+					   <p>Here you’ll find the best Lua scripts for Roblox! Enhance your game, create new possibilities, and surprise your friends. Subscribe and stay updated with fresh content!</p>
+						<a href="https://t.me/+f6UreQx9mYI5NGMy" target="_blank">👉 Go to channel</a>
+					</div>
+			</div>
+
+
+
 			    <img src="assets/896.gif" alt="Анимация" class="bot-animation">
         </div>
     </div>
