--- a/index.html
+++ b/index.html
@@ -1,91 +1,84 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <title>Портфолио — Сергей Вельский</title>
+    <meta name="description" content="Портфолио Python-разработчика, создателя Telegram-ботов и AI-проектов">
+	<link rel="stylesheet" href="style.css">
+	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
-<body>
+<body class="light-theme">
     <div class="container">
-        <div class="language-select-container"> <!-- Новый контейнер для выбора языка -->
-            <div class="language-select">
-                <label for="language">🌍:</label>
-                <select id="language" onchange="changeLanguage()">
-                    <option value="index.html" selected>Ру</option>
-                    <option value="index_en.html">En</option>
-                </select>
-            </div>
-        </div>
 
-        <div class="profile-wrapper"> <!-- Обертка для аватара и описания -->
-			
-            <img src="assets/your-avatar.jpg" alt="Ваш аватар" class="avatar">
+		<!-- Панель настроек — язык и тема -->
+		<div class="settings-panel">
+		  <div class="language-select">
+			<label for="language">🌍</label>
+			<select id="language" aria-label="Выберите язык">
+			  <option value="index.html" selected>Ру</option>
+			  <option value="index_en.html">En</option>
+			</select>
+		  </div>
+
+		  <button id="theme-toggle" class="theme-toggle-btn">Тёмная тема</button>
+		</div>
+        
+        <!-- Профиль -->
+        <div class="profile-wrapper" id="profile">
+            <img src="assets/your-avatar.jpg" alt="Аватар Сергея Вельского" class="avatar" loading="lazy">
             <h1>Сергей Вельский</h1>
             <p class="description">"Python Developer | Telegram Bot Creator | AI Enthusiast"</p>
         </div>
- 
+
+        <!-- Список ботов -->
         <div class="bot-list">
-			<div class="bot-item">
-				<div class="bot-item-screenshot">
-					<img src="assets/The_AI_Art_Anarchy.png" alt="Скриншот The_AI_Art_Anarchy">
-				</div>
-				<div class="bot-item-description">
-					<h2>📜The AI Art Anarchy</h2>
-					<!--A daily dose of inspiration from Artificial Intelligence! Multiple times a day, neural networks generate unique artworks based on an analysis of current trending prompts. The AI itself chooses the time, crafts the prompt, and creates the image. Subscribe and dive into the world of machine creativity!<br> 
-					The channel is managed by an autonomous bot. 👻<br><br>-->
-					<p>Ежедневная доза вдохновения от Искуственного Интелекта!
-					Несколько раз в день на основе анализа актуальных запросов нейросети генерируют уникальные арты. ИИ сам выбирает время, формирует запрос и генерирует изображение.
-					Подпишись и погрузись в мир машинного творчества!<br><i>Каналом управляет автономный бот.</i>👻</p>
-					<a href="https://t.me/The_AI_Art_Anarchy" target="_blank">👉 Перейти на канал </a>
-				</div>
-			</div>
+            <article class="bot-item" id="bot1">
+                <div class="bot-item-screenshot">
+                    <img src="assets/The_AI_Art_Anarchy.png" alt="Пример арта из канала The AI Art Anarchy" loading="lazy">
+                </div>
+                <div class="bot-item-description">
+                    <h2>📜 The AI Art Anarchy</h2>
+                    <p>Ежедневная доза вдохновения от Искусственного Интеллекта! Несколько раз в день на основе анализа актуальных запросов нейросети генерируют уникальные арты. ИИ сам выбирает время, формирует запрос и генерирует изображение. Подпишись и погрузись в мир машинного творчества!<br><i>Каналом управляет автономный бот.</i>👻</p>
+                    <a href="https://t.me/The_AI_Art_Anarchy" target="_blank" rel="noopener" aria-label="Перейти на канал The AI Art Anarchy">👉 Перейти на канал</a>
+                </div>
+            </article>
 
-			<div class="bot-item">
-				<div class="bot-item-screenshot">
-					<img src="assets/Fanny_art.png" alt="Скриншот Fanny_art">
-				</div>
-				<div class="bot-item-description">
-					<h2>📜Funny art images</h2>
-					<!-- Random themes meet AI curation! Each day, this channel generates a new theme and finds the perfect images to match. Get inspired daily!<br><br> -->
-				   <p>Этот канал генерирует тему случайным образом, а затем ИИ находит лучшие картинки по ней. Каждый день новая подборка.</p>
-					<a href="https://t.me/Fanny_art" target="_blank">👉 Перейти на канал </a>
-				</div>
-			</div>
-			
-			<div class="bot-item">
-					<div class="bot-item-screenshot">
-						<img src="assets/python_art.png" alt="Скриншот Python_Git">
-					</div>
-					<div class="bot-item-description">
-						<h2>📜Python Git</h2>
-						<!-- Small Python projects with code explanations — an evolving collection for learning and inspiration.<br><br> -->
-					   <p>Маленькие проекты на Python с объяснением кода — пополняемая подборка для обучения и вдохновения.</p>
-						<a href="https://t.me/python_Git" target="_blank">👉 Перейти на канал </a>
-					</div>
-			</div>
-			
-			<div class="bot-item">
-					<div class="bot-item-screenshot">
-						<img src="assets/roblox_art.png" alt="Скриншот roblox_art">
-					</div>
-					<div class="bot-item-description">
-						<h2>📜Roblox Git</h2>					
-					   <p>Здесь ты найдешь лучшие Lua-скрипты для Roblox! Улучшай свою игру, создавай новые возможности и удивляй друзей. Подписывайся и будь в курсе свежих обновлений!</p>
-						<a href="https://t.me/+f6UreQx9mYI5NGMy" target="_blank">👉 Перейти на канал </a>
-					</div>
-			</div>
+            <article class="bot-item" id="bot2">
+                <div class="bot-item-screenshot">
+                    <img src="assets/Fanny_art.png" alt="Пример арта из канала Funny art images" loading="lazy">
+                </div>
+                <div class="bot-item-description">
+                    <h2>📜 Funny art images</h2>
+                    <p>Этот канал генерирует тему случайным образом, а затем ИИ находит лучшие картинки по ней. Каждый день новая подборка.</p>
+                    <a href="https://t.me/Fanny_art" target="_blank" rel="noopener" aria-label="Перейти на канал Funny art images">👉 Перейти на канал</a>
+                </div>
+            </article>
 
-		</div>
-	</div>
+            <article class="bot-item" id="bot3">
+                <div class="bot-item-screenshot">
+                    <img src="assets/python_art.png" alt="Пример проекта из канала Python Git" loading="lazy">
+                </div>
+                <div class="bot-item-description">
+                    <h2>📜 Python Git</h2>
+                    <p>Маленькие проекты на Python с объяснением кода — пополняемая подборка для обучения и вдохновения.</p>
+                    <a href="https://t.me/python_Git" target="_blank" rel="noopener" aria-label="Перейти на канал Python Git">👉 Перейти на канал</a>
+                </div>
+            </article>
 
-    <script src="script.js"></script>
-    <script>
-        function changeLanguage() {
-            var selectedLanguage = document.getElementById("language").value;
-            window.location.href = selectedLanguage;
-        }
-    </script>
+            <article class="bot-item" id="bot4">
+                <div class="bot-item-screenshot">
+                    <img src="assets/roblox_art.png" alt="Пример скриптов из канала Roblox Git" loading="lazy">
+                </div>
+                <div class="bot-item-description">
+                    <h2>📜 Roblox Git</h2>
+                    <p>Здесь ты найдешь лучшие Lua-скрипты для Roblox! Улучшай свою игру, создавай новые возможности и удивляй друзей. Подписывайся и будь в курсе свежих обновлений!</p>
+                    <a href="https://t.me/+f6UreQx9mYI5NGMy" target="_blank" rel="noopener" aria-label="Перейти на канал Roblox Git">👉 Перейти на канал</a>
+                </div>
+            </article>
+        </div>
+    </div>
+
+    <script src="script.js" defer></script>
 </body>
 </html>
