--- a/index_en.html
+++ b/index_en.html
@@ -21,7 +21,7 @@
 			</select>
 		  </div>
 
-		  <button id="theme-toggle" class="theme-toggle-btn">Тёмная тема</button>
+		  <button id="theme-toggle" class="theme-toggle-btn">dark</button>
 		</div>
         
         <!-- Профиль -->
@@ -83,3 +83,4 @@
         <script src="script.js" defer></script>
 </body>
 </html>
+
