--- a/index.html
+++ b/index.html
@@ -11,24 +11,26 @@
 <body class="light-theme">
     <div class="container">
 
-		<!-- Панель настроек — язык и тема -->
-		<div class="settings-panel">
-		  <div class="language-select">
-			<label for="language">🌍</label>
-			<select id="language" aria-label="Выберите язык">
-			  <option value="index.html" selected>Ру</option>
-			  <option value="index_en.html">En</option>
-			</select>
-		  </div>
+        <!-- Панель настроек -->
+        <div class="settings-panel">
+            <div class="language-select">
+                <label for="language">🌍</label>
+                <select id="language" aria-label="Выберите язык">
+                    <option value="index.html" selected>Ру</option>
+                    <option value="index_en.html">En</option>
+                </select>
+            </div>
+            <button id="theme-toggle" class="theme-toggle-btn" aria-label="Переключить тему">
+                <span id="theme-icon">☀️</span>
+            </button>
+        </div>
 
-		  <button id="theme-toggle" class="theme-toggle-btn">Тёмная тема</button>
-		</div>
-        
         <!-- Профиль -->
         <div class="profile-wrapper" id="profile">
-            <img src="assets/your-avatar.jpg" alt="Аватар Сергея Вельского" class="avatar" loading="lazy">
+            <img src="assets/your-avatar.jpg" alt="Аватар Сергея Вельского" class="avatar" loading="lazy" id="avatar">
             <h1>Сергей Вельский</h1>
             <p class="description">"Python Developer | Telegram Bot Creator | AI Enthusiast"</p>
+            <p class="welcome" id="welcome">Добро пожаловать!</p>
         </div>
 
         <!-- Список ботов -->
@@ -40,7 +42,7 @@
                 <div class="bot-item-description">
                     <h2>📜 The AI Art Anarchy</h2>
                     <p>Ежедневная доза вдохновения от Искусственного Интеллекта! Несколько раз в день на основе анализа актуальных запросов нейросети генерируют уникальные арты. ИИ сам выбирает время, формирует запрос и генерирует изображение. Подпишись и погрузись в мир машинного творчества!<br><i>Каналом управляет автономный бот.</i>👻</p>
-                    <a href="https://t.me/The_AI_Art_Anarchy" target="_blank" rel="noopener" aria-label="Перейти на канал The AI Art Anarchy">👉 Перейти на канал</a>
+                    <a href="#" data-url="https://t.me/The_AI_Art_Anarchy" class="tg-link">👉 Перейти на канал</a>
                 </div>
             </article>
 
@@ -51,7 +53,7 @@
                 <div class="bot-item-description">
                     <h2>📜 Funny art images</h2>
                     <p>Этот канал генерирует тему случайным образом, а затем ИИ находит лучшие картинки по ней. Каждый день новая подборка.</p>
-                    <a href="https://t.me/Fanny_art" target="_blank" rel="noopener" aria-label="Перейти на канал Funny art images">👉 Перейти на канал</a>
+                    <a href="#" data-url="https://t.me/Fanny_art" class="tg-link">👉 Перейти на канал</a>
                 </div>
             </article>
 
@@ -62,7 +64,7 @@
                 <div class="bot-item-description">
                     <h2>📜 Python Git</h2>
                     <p>Маленькие проекты на Python с объяснением кода — пополняемая подборка для обучения и вдохновения.</p>
-                    <a href="https://t.me/python_Git" target="_blank" rel="noopener" aria-label="Перейти на канал Python Git">👉 Перейти на канал</a>
+                    <a href="#" data-url="https://t.me/python_Git" class="tg-link">👉 Перейти на канал</a>
                 </div>
             </article>
 
@@ -73,7 +75,7 @@
                 <div class="bot-item-description">
                     <h2>📜 Roblox Git</h2>
                     <p>Здесь ты найдешь лучшие Lua-скрипты для Roblox! Улучшай свою игру, создавай новые возможности и удивляй друзей. Подписывайся и будь в курсе свежих обновлений!</p>
-                    <a href="https://t.me/+f6UreQx9mYI5NGMy" target="_blank" rel="noopener" aria-label="Перейти на канал Roblox Git">👉 Перейти на канал</a>
+                    <a href="#" data-url="https://t.me/+f6UreQx9mYI5NGMy" class="tg-link">👉 Перейти на канал</a>
                 </div>
             </article>
         </div>
