--- a/index_en.html
+++ b/index_en.html
@@ -11,8 +11,15 @@
 <body class="light-theme">
     <div class="container">
 
-		<!-- Панель настроек — язык и тема -->
-		<div class="settings-panel">
+		<!-- Панель темы — слева вверху -->
+		<div class="theme-panel">
+		  <button id="theme-toggle" class="theme-toggle-btn" aria-label="Переключить тему">
+			<span id="theme-icon">☀️</span>
+		  </button>
+		</div>
+
+		<!-- Панель языка — справа вверху -->
+		<div class="language-panel">
 		  <div class="language-select">
 			<label for="language">🌍</label>
 			<select id="language" aria-label="Выберите язык">
@@ -20,15 +27,14 @@
 			  <option value="index_en.html">En</option>
 			</select>
 		  </div>
-
-		  <button id="theme-toggle" class="theme-toggle-btn">🌙</button>
 		</div>
-        
+
         <!-- Профиль -->
         <div class="profile-wrapper" id="profile">
-            <img src="assets/your-avatar.jpg" alt="Аватар Сергея Вельского" class="avatar" loading="lazy">
+            <img src="assets/your-avatar.jpg" alt="Аватар Сергея Вельского" class="avatar" loading="lazy" id="avatar">
             <h1>Sergey</h1>
             <p class="description">"Python Developer | Telegram Bot Creator | AI Enthusiast"</p>
+            <p class="welcome" id="welcome">Welcome!</p>
         </div>
 
         <!-- Список ботов -->
@@ -39,9 +45,8 @@
                 </div>
                 <div class="bot-item-description">
                     <h2>📜 The AI Art Anarchy</h2>
-                    <p>A daily dose of inspiration from Artificial Intelligence! Multiple times a day, neural networks generate unique artworks based on an analysis of current trending prompts. The AI itself chooses the time, crafts the prompt, and creates the image. Subscribe and dive into the world of machine creativity!<br> 
-					<br><i>The channel is managed by an autonomous bot.</i>👻</p>
-                    <a href="https://t.me/The_AI_Art_Anarchy" target="_blank" rel="noopener" aria-label="Go to channel The AI Art Anarchy">👉 Go to channel</a>
+                    <p>A daily dose of inspiration from Artificial Intelligence! Multiple times a day, neural networks generate unique artworks based on an analysis of current trending prompts. The AI itself chooses the time, crafts the prompt, and creates the image. Subscribe and dive into the world of machine creativity!<br><i>The channel is managed by an autonomous bot.</i>👻</p>
+                    <a href="#" data-url="https://t.me/The_AI_Art_Anarchy" class="tg-link">👉 Перейти на канал</a>
                 </div>
             </article>
 
@@ -51,37 +56,13 @@
                 </div>
                 <div class="bot-item-description">
                     <h2>📜 Funny art images</h2>
-                    <p> Random themes meet AI curation! Each day, this channel generates a new theme and finds the perfect images to match. Get inspired daily!<br><br></p>
-					  <a href="https://t.me/Fanny_art" target="_blank" rel="noopener" aria-label="👉 Go to channel Funny art images">👉 Go to channel</a>
+                    <p> Random themes meet AI curation! Each day, this channel generates a new theme and finds the perfect images to match. Get inspired daily!</p>
+                    <a href="#" data-url="https://t.me/Fanny_art" class="tg-link">👉 Перейти на канал</a>
                 </div>
-            </article>
-
-            <article class="bot-item" id="bot3">
-                <div class="bot-item-screenshot">
-                    <img src="assets/python_art.png" alt="Пример проекта из канала Python Git" loading="lazy">
-                </div>
-                <div class="bot-item-description">
-                    <h2>📜 Python Git</h2>
-                    <p>Small Python projects with code explanations — an evolving collection for learning and inspiration.</p>
-					<a href="https://t.me/python_Git" target="_blank" rel="noopener" aria-label="Go to channel Python Git">👉 Go to channel</a>
-                </div>
-            </article>
-
-            <article class="bot-item" id="bot4">
-                <div class="bot-item-screenshot">
-                    <img src="assets/roblox_art.png" alt="Пример скриптов из канала Roblox Git" loading="lazy">
-                </div>
-                <div class="bot-item-description">
-                    <h2>📜 Roblox Git</h2>
-                    <p>Here you’ll find the best Lua scripts for Roblox! Enhance your game, create new possibilities, and surprise your friends. Subscribe and stay updated with fresh content!</p>
-						<a href="https://t.me/+f6UreQx9mYI5NGMy" target="_blank">👉 Go to channel</a>
-			   </div>
             </article>
         </div>
     </div>
 
-        <script src="script.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
-
-
